# ml-entry-workshop

./: README.md  pyproject.toml
ml_entry_workshop/: What is Neural Network.ipynb  workshop_notebook.ipynb
ml_entry_workshop/photo_rater/: photo-rater.py
ml_entry_workshop/photo_rater/photos/Men/: 347.avif  421.avif
ml_entry_workshop/photo_rater/photos/Women/: 335.avif  397.avif  423.avif  452.avif
